# kornelian

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  docker-compose_build.yml  readme.md  scratch.rs  scratch_eval.rs  test_pdf.rs
.zed/: debug.json  settings.json  tasks.json
locales/: el.properties  en.properties  ru.properties
src/: db.rs  i18n.rs  main.rs  models.rs  services.rs
src/auth/: config.rs  jwt.rs  mod.rs  routes.rs
src/components/: admin.rs  layout.rs  mod.rs  user.rs
src/components/auth/: auth_context.rs  login.rs  mod.rs
src/components/user/: mod.rs  notes.rs
