[package]
name = "taffeite"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Dioxus setup
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-logger = "0.7.9"
dotenvy = "0.15"

# Serialization & Async
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.52.3", features = ["sync", "macros"], optional = true }

# Database layer
# REMOVED default-features = false from mongodb to stop internal compilation failures
mongodb = { version = "3.7.0", optional = true }
bson = { version = "2.15.0", features = [
    "chrono-0_4",
    "uuid-1",
], default-features = false }
log = "0.4"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio", "dep:mongodb"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
